@@ -197,6 +197,28 @@ ewl_object_set_maximum_size(Ewl_Object * o, int w, int h)
 		CURRENT_H(o) = h;
 }
 
+inline void
+ewl_object_set_maximum_width(Ewl_Object * o, int w)
+{
+	DENTER_FUNCTION;
+	DCHECK_PARAM_PTR("o", o);
+
+	o->maximum.w = w;
+
+	DLEAVE_FUNCTION;
+}
+
+inline void
+ewl_object_set_maximum_height(Ewl_Object * o, int h)
+{
+	DENTER_FUNCTION;
+	DCHECK_PARAM_PTR("o", o);
+
+	o->maximum.h = h;
+
+	DLEAVE_FUNCTION;
+}
+
 void
 ewl_object_get_maximum_size(Ewl_Object * o, int *w, int *h)
 {
